@@ -1,5 +1,10 @@
 2004-04-22  Matthias Clasen  <mclasen@redhat.com>
 
+	* tests/queue-test.c (main): Add some tests for off-by-one errors.
+
+	* glib/gqueue.c (g_queue_pop_nth_link): Fix an off-by-one 
+	error.  (#139703, Philippe Blain)
+
 	* tests/testglib.c (main): Add testcases for g_message() involving
 	non-printable and unsafe characters.
 
